# ticket-triage-env

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
server/: app.py  environment.py
ticket_triage_env/: __init__.py  client.py  models.py
